# natural-language-search

./: pyproject.toml
headless-crawler/: crawl.mjs  router.mjs
headless-crawler/pages/: base.mjs  item.mjs  list.mjs
headless-crawler/sites/ebay.com_gpu/: index.mjs  urls.mjs
headless-crawler/sites/ebay.com_gpu/crawlers/: item.mjs  search-results.mjs
headless-crawler/sites/greatschools.com/: index.mjs  urls.mjs
headless-crawler/sites/greatschools.com/crawlers/: school-list.mjs  school.mjs
headless-crawler/sites/optcorp/: index.mjs  urls.mjs
headless-crawler/sites/optcorp/crawlers/: category.mjs  product.mjs
infra/scripts/: install_dev_tools.sh
scripts/: install_dev_tools.sh
