[tool.poetry]
name = "natural-language-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "natural_language_search"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
